# BezierEditor

./: CMakeLists.txt  manager.py
shader/: CMakeLists.txt  curve2d.vert
src/: main.cpp  scene.hpp
src/render_pass/: bezier_render_pass.hpp
src/render_system/: line2d_render_system.hpp
